--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -2,9 +2,6 @@
   body {
     max-width: 37em;
   }
-  header {
-    height: 150px;
-  }
 
   h1 {
     font-size: 2.5rem;
@@ -19,7 +16,7 @@
   }
 
   header {
-    height: 140px;
+    height: 160px;
   }
 
   img {
